--- a/employee-search/employee-search.properties
+++ b/employee-search/employee-search.properties
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-minhsethanhcong=Mọi điều ước muốn đều trở thành sự thật
+minhsethanhcong=Co quyet tam thi se thanh cong
