--- a/employee-search.properties
+++ b/employee-search.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-variable=Nguyen dep trai
+variable=Nguyen dep trai qua
