--- a/employee-search.properties
+++ b/employee-search.properties
@@ -11,4 +11,4 @@
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 # spring.jpa.hibernate.ddl-auto = update
-variable=Nguyen cute qua gheadsadsadsadsa
+variable=Nguyen cute qua ghe
