--- a/configuration/cus-service.yml
+++ b/configuration/cus-service.yml
@@ -8,7 +8,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: true
+      ddl-auto: update
     show-sql: true
     
 security:
