--- a/configuration/oauth-service.yml
+++ b/configuration/oauth-service.yml
@@ -10,3 +10,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+jwt:
+  enhance:
+    store:
+      file: classpath:/enhance/keystore.jks
+      password: nguyenvt2
+    key:
+      alias: nguyenvt2@fsoft.com.vn
+      password: nguyenvt2
