--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,5 @@
 config:
-  variable: LADY AND GENTLEMAN! WELCOME TO MICROSERVICE!
+  variable: LADY AND GENTLEMAN! WELCOME TO MICROSERVICE! C146
   
 jwt:
   enhance:
