--- a/configuration/service-report.yml
+++ b/configuration/service-report.yml
@@ -1,5 +1,44 @@
 
 haha: NguyenVT2 ahaha
+spring:
+  profiles:
+    active: local
+---
+spring:
+  profiles: local
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+        ddl-auto: none
+        dialect: org.hibernate.dialect.H2Dialect
+                     
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
+
+rabbitmq:
+  host: 127.0.0.1
+  username: admin
+  password: admin
+  mes:
+    websocket:
+      queue: 
+        line: local.websocket.line.chart.queue
+        factory: local.websocket.factory.chart.queue
+      fanout:
+        line: local.websocket.line.chart.fanout
+        factory: local.websocket.factory.chart.fanout
+  manufacturing:
+    data:
+      filtered:
+        queue: 
+          line: local.manufacturing.data.filtered.line.queue
+          factory: local.manufacturing.data.filtered.factory.queue
+        fanout: 
+          line: local.manufacturing.data.filtered.line.fanout
+          factory: local.manufacturing.data.filtered.factory.fanout
+   
 eureka:
   instance:
     instanceId: ${server.port}:${spring.application.name}:${random.int}
